[gd_scene load_steps=5 format=3 uid="uid://cxrq0y8oacs2e"]

[ext_resource type="Theme" uid="uid://fyuqosnd1wg8" path="res://assets/resources/main.tres" id="1_e2uvb"]
[ext_resource type="Script" uid="uid://dwweykrl11x7x" path="res://scripts/confirm_menu.gd" id="1_uqm3v"]
[ext_resource type="Texture2D" uid="uid://bauxj0x2byc8" path="res://assets/nine-patch.png" id="2_5mcpd"]
[ext_resource type="PackedScene" uid="uid://dm3pca7e8aygp" path="res://scenes/avatar.tscn" id="3_ulekl"]

[node name="ConfirmMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e2uvb")
script = ExtResource("1_uqm3v")

[node name="Move" type="Node2D" parent="."]
position = Vector2(448, 1256)

[node name="NinePatchRect" type="NinePatchRect" parent="Move"]
offset_left = 56.0
offset_right = 848.0
offset_bottom = 384.0
theme = ExtResource("1_e2uvb")
texture = ExtResource("2_5mcpd")
patch_margin_left = 68
patch_margin_top = 68
patch_margin_right = 68
patch_margin_bottom = 68

[node name="Confirm" type="Button" parent="Move"]
offset_left = 536.0
offset_top = 223.0
offset_right = 677.0
offset_bottom = 276.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 18
text = "Send Units"

[node name="Deny" type="Button" parent="Move"]
offset_left = 536.0
offset_top = 290.0
offset_right = 673.0
offset_bottom = 345.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 18
text = "Cancel"

[node name="Label" type="Label" parent="Move"]
offset_left = 59.0
offset_top = -9.0
offset_right = 845.0
offset_bottom = 83.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 64
text = "Move how many units?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtract" type="Button" parent="Move"]
offset_left = 520.0
offset_top = 115.0
offset_right = 552.0
offset_bottom = 170.0
theme = ExtResource("1_e2uvb")
text = "-"

[node name="Add" type="Button" parent="Move"]
offset_left = 661.0
offset_top = 115.0
offset_right = 693.0
offset_bottom = 170.0
theme = ExtResource("1_e2uvb")
text = "+"

[node name="UnitCount" type="Label" parent="Move"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 571.0
offset_top = 52.0
offset_right = 649.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 128
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Avatar" parent="Move" instance=ExtResource("3_ulekl")]
position = Vector2(231, 215)
scale = Vector2(0.5, 0.5)

[node name="Attack" type="Node2D" parent="."]
position = Vector2(448, 1256)

[node name="NinePatchRect" type="NinePatchRect" parent="Attack"]
offset_left = 56.0
offset_right = 848.0
offset_bottom = 384.0
theme = ExtResource("1_e2uvb")
texture = ExtResource("2_5mcpd")
patch_margin_left = 68
patch_margin_top = 68
patch_margin_right = 68
patch_margin_bottom = 68

[node name="Confirm" type="Button" parent="Attack"]
offset_left = 382.0
offset_top = 238.0
offset_right = 523.0
offset_bottom = 291.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 18
text = "Send Units"

[node name="Deny" type="Button" parent="Attack"]
offset_left = 382.0
offset_top = 305.0
offset_right = 519.0
offset_bottom = 360.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 18
text = "Cancel"

[node name="Label" type="Label" parent="Attack"]
offset_left = 59.0
offset_top = -9.0
offset_right = 845.0
offset_bottom = 83.0
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 52
text = "Attack with How many units?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtract" type="Button" parent="Attack"]
offset_left = 366.0
offset_top = 130.0
offset_right = 398.0
offset_bottom = 185.0
theme = ExtResource("1_e2uvb")
text = "-"

[node name="Add" type="Button" parent="Attack"]
offset_left = 507.0
offset_top = 130.0
offset_right = 539.0
offset_bottom = 185.0
theme = ExtResource("1_e2uvb")
text = "+"

[node name="UnitCount" type="Label" parent="Attack"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 417.0
offset_top = 67.0
offset_right = 495.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e2uvb")
theme_override_font_sizes/font_size = 128
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackerAvatar" parent="Attack" instance=ExtResource("3_ulekl")]
position = Vector2(198, 214)
scale = Vector2(0.5, 0.5)

[node name="DefenderAvatar" parent="Attack" instance=ExtResource("3_ulekl")]
position = Vector2(706, 214)
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="Move/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Move/Deny" to="." method="_on_deny_pressed"]
[connection signal="pressed" from="Move/Subtract" to="." method="_on_subtract_pressed"]
[connection signal="pressed" from="Move/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Attack/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Attack/Deny" to="." method="_on_deny_pressed"]
[connection signal="pressed" from="Attack/Subtract" to="." method="_on_subtract_pressed"]
[connection signal="pressed" from="Attack/Add" to="." method="_on_add_pressed"]
